# Argon2GUI

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
img/: icon.icns
res/: icons.qrc
src/: CMakeLists.txt  Info.plist  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
